# QuOpt

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md
scripts/: bebop_submit_slurm.sh  read_parameters.sh  robust_disproving_structure.m  verify_layer_run.py
scripts/5/: quopt.error
scripts/6/: optout_10062_bdw-0448_0.txt  optout_10312_bdw-0448_0.txt  optout_1062_bdw-0447_0.txt  optout_10687_bdw-0484_0.txt  optout_10926_bdw-0590_0.txt  optout_10927_bdw-0590_0.txt  optout_10936_bdw-0590_0.txt  optout_10937_bdw-0590_0.txt  optout_10939_bdw-0590_0.txt  optout_10942_bdw-0590_0.txt  optout_11062_bdw-0590_0.txt  optout_12187_bdw-0602_0.txt  optout_12687_bdw-0608_0.txt  optout_12812_bdw-0608_0.txt  optout_1302_bdw-0448_0.txt  optout_1312_bdw-0448_0.txt  optout_1317_bdw-0448_0.txt  optout_13937_bdw-0447_0.txt  optout_14055_bdw-0447_0.txt  optout_14057_bdw-0447_0.txt  optout_14060_bdw-0447_0.txt  optout_14062_bdw-0447_0.txt  optout_14063_bdw-0447_0.txt  optout_14687_bdw-0448_0.txt  optout_1551_bdw-0448_0.txt  optout_1562_bdw-0448_0.txt  optout_1564_bdw-0448_0.txt  optout_1566_bdw-0448_0.txt  optout_1567_bdw-0448_0.txt  optout_1677_bdw-0448_0.txt  optout_1687_bdw-0448_0.txt  optout_2811_bdw-0596_0.txt  optout_2812_bdw-0596_0.txt  optout_3312_bdw-0600_0.txt  optout_3435_bdw-0600_0.txt  optout_3437_bdw-0600_0.txt  optout_3438_bdw-0600_0.txt  optout_4557_bdw-0442_0.txt  optout_4562_bdw-0442_0.txt  optout_4572_bdw-0442_0.txt  (+100 more)
src/: main.cpp
